setup base project structure
Remove the .Github File

Remove   the .Github file that was configured with the template.
Currently, not needed in the porject.

Ignore Netbeans files

Remove duplicate index.html in root

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,18 @@
-body {
-  background-color: #00a0d2;
-}
+
+
+/* Core variables */
+@import 'base/vars';
+
+/* CSS Reset */
+@import 'base/reset';
+
+
+/* Fonts */
+@import 'base/fonts';
+
+/* Mixins, helpers and functions */
+@import 'base/mixins';
+
+
+/* Demo Page styles */
+@import 'demo';
