squash setup font-face

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,10 +2,34 @@
  * Fonts
 */
 
-// @font-face {
-//   font-family: 'DINP-R';
-//   src: url("../fonts/DINPro-Regular.eot?") format("eot"),
-//   url("../fonts/DINPro-Regular.woff") format("woff"),
-//   url("../fonts/DINPro-Regular.ttf") format("truetype");
-//   font-style: normal;
-// }
+
+@font-face {
+    font-family: 'Poppins';
+    src: url("../fonts/Poppins-Regular.eot?") format("eot"),
+    url("../fonts/Poppins-Regular.woff") format("woff"), 
+    url("../fonts/Poppins-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 400;
+  }
+  
+
+
+  @font-face {
+    font-family: 'Poppins';
+    src: url("../fonts/Poppins-Bold.eot?") format("eot"),
+    url("../fonts/Poppins-Bold.woff") format("woff"), 
+    url("../fonts/Poppins-Bold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 700;
+  }
+
+  
+
+  @font-face {
+    font-family: 'Poppins';
+    src: url("../fonts/Poppins-Black.eot?") format("eot"),
+    url("../fonts/Poppins-Black.woff") format("woff"), 
+    url("../fonts/Poppins-Black.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 900;
+  }
