--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -5,31 +5,31 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url("../fonts/Poppins-Regular.eot?") format("eot"),
-    url("../fonts/Poppins-Regular.woff") format("woff"), 
-    url("../fonts/Poppins-Regular.ttf") format("truetype");
+    src: url("../fonts/poppins/Poppins-Regular.eot?") format("eot"),
+    url("../fonts/poppins/Poppins-Regular.woff") format("woff"),
+    url("../fonts/poppins/Poppins-Regular.ttf") format("truetype");
     font-style: normal;
     font-weight: 400;
   }
-  
+
 
 
   @font-face {
     font-family: 'Poppins';
-    src: url("../fonts/Poppins-Bold.eot?") format("eot"),
-    url("../fonts/Poppins-Bold.woff") format("woff"), 
-    url("../fonts/Poppins-Bold.ttf") format("truetype");
+    src: url("../fonts/poppins/Poppins-Bold.eot?") format("eot"),
+    url("../fonts/poppins/Poppins-Bold.woff") format("woff"),
+    url("../fonts/poppins/Poppins-Bold.ttf") format("truetype");
     font-style: normal;
     font-weight: 700;
   }
 
-  
+
 
   @font-face {
     font-family: 'Poppins';
-    src: url("../fonts/Poppins-Black.eot?") format("eot"),
-    url("../fonts/Poppins-Black.woff") format("woff"), 
-    url("../fonts/Poppins-Black.ttf") format("truetype");
+    src: url("../fonts/poppins/Poppins-Black.eot?") format("eot"),
+    url("../fonts/poppins/Poppins-Black.woff") format("woff"),
+    url("../fonts/poppins/Poppins-Black.ttf") format("truetype");
     font-style: normal;
     font-weight: 900;
   }
